Initial configuration for first deployment

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,20 +1,18 @@
 ---
-service: serverless-react-boilerplate
+service: serverless-react
 frameworkVersion: "3"
 useDotenv: true
-variablesResolutionMode: 20210326
 disabledDeprecations:
   - CLI_OPTIONS_SCHEMA # some Serverless plugins haven't been updated yet and generate warnings
 
 provider:
   name: aws
-  runtime: nodejs12.x
-  region: ${opt:region, 'us-east-1'}
+  runtime: nodejs14.x
+  region: ${opt:region, 'ap-southeast-1'}
   stage: ${opt:stage, 'dev'}
   memorySize: 512
   timeout: 6
   logRetentionInDays: 7
-  lambdaHashingVersion: 20201221 # for upcoming Serverless v3
 
   apiGateway:
     shouldStartNameWithService: true # for upcoming Serverless v3
