--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@babel/preset-stage-2": "^7.8.3",
     "@babel/preset-typescript": "^7.12.7",
     "@types/aws-lambda": "^8.10.71",
+    "@types/babel-core": "^6.25.6",
     "@types/babel__core": "^7.1.12",
     "@types/babel__preset-env": "^7.9.1",
-    "@types/babel-core": "^6.25.6",
     "@types/concurrently": "^6.2.0",
     "@types/copy-webpack-plugin": "^8.0.0",
     "@types/core-js": "^2.5.4",
@@ -42,6 +42,7 @@
     "@types/source-map-support": "^0.5.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.3.1",
+    "autoprefixer": "^10.4.8",
     "aws-sdk": "^2.834.0",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
@@ -56,6 +57,7 @@
     "jest-module-name-mapper": "^0.1.5",
     "mini-css-extract-plugin": "^2.4.2",
     "null-loader": "^4.0.1",
+    "postcss": "^8.4.14",
     "prettier": "^2.2.1",
     "react-refresh": "^0.10.0",
     "serverless": "^3.14.0",
@@ -63,6 +65,7 @@
     "serverless-plugin-scripts": "^1.0.2",
     "serverless-s3-deploy": "^0.10.0",
     "serverless-webpack": "^5.3.5",
+    "tailwindcss": "^3.1.8",
     "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
