--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-react-boilerplate",
+  "name": "serverless-react",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "start:offline": "sls offline start",
     "build:serverless": "sls package",
     "build:browser": "webpack --config webpack.browser.config.js --mode production",
+    "build:tailwind": "tailwindcss -i ./src/browser/index.css -o ./src/browser/output.css --watch",
     "deploy": "sls deploy",
     "test": "jest"
   },
@@ -77,7 +78,7 @@
   "prettier": {
     "printWidth": 120,
     "tabWidth": 2,
-    "useTabs": false,
+    "useTabs": true,
     "semi": true,
     "singleQuote": false,
     "quoteProps": "as-needed",
